# pylint-modularity

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: pylint_import_restriction.py  pylint_modularity.py
tests/: test_import_restriction.py  test_pylint_modularity.py
