[tool.poetry]
authors = ["Svilen Piralkov <svile@users.noreply.github.com>"]
description = "Pylint plugin to help enforce separation of concerns through import restrictions."
name = "pylint-import-restriction"
readme = "README.md"
version = "0.dev"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
mypy = "^1.6.1"
pylint = "^3.0.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

## ================================
## Dev tools configuration settings
## ================================

# Black formatter configuration
# ---------------------------------
[tool.black]
line-length = 88

# Pylint linter configuration
# ---------------------------------
[tool.pylint.MAIN]
load-plugins = "pylint_import_restriction"

[tool.pylint.FORMAT]
max-line-length = 88

# MyPy static code analysis configuration
# ---------------------------------
# Global MyPy configuration applied to all libraries and files.
[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
# Ignore libraries which don't have any type definitions
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ['astroid.nodes', 'pylint.checkers', 'pylint.lint']

# Pytest test configuration
# ---------------------------------
[tool.pytest.ini_options]
addopts = "-ra -q --cov-fail-under=75 --cov=src --cov-report=term-missing"
minversion = "6.0"
testpaths = [
  "tests",
]
